tools/intel_gpu_top: fix segfault on discrete

In case no display clients ignore display client list.

Closes: https://gitlab.freedesktop.org/drm/igt-gpu-tools/-/issues/140
Reported-by: Eero Tamminen <eero.t.tamminen@intel.com>
Signed-off-by: Juha-Pekka Heikkila <juhapekka.heikkila@gmail.com>
Reviewed-by: Kamil Konieczny <kamil.konieczny@linux.intel.com>